--- a/src/views/pages/main.mustache
+++ b/src/views/pages/main.mustache
@@ -1,21 +1,24 @@
 {{>partials/header}}
 
+{{#infos}}
 <section
   class="banner"
-  style="background-image: url('images/allanimals.jpg')">
-  Todos os animais
+  style="background-image: url('/images/{{background}}')">
+  {{title}}
 </section>
-<h2>Todos os animais disponíveis para adoção</h2>
-
+  <h2> {{title}} disponíveis para adoção</h2>
+{{/infos}}
+{{#data}}
 <div class="container list">
   <div class="item">
     <img
-      src="images/pastor-alemao.jpg"
+      src="/images/{{image}}"
       class="item--image" />
-    <div class="item--name">Pastor-alemão</div>
-    <div class="item--color">Cor: Amarelo e Preto</div>
-    <div class="item--genre">Gênero: Masculino</div>
+    <div class="item--name">{{name}}</div>
+    <div class="item--color">Cor: {{color}}</div>
+    <div class="item--genre">Gênero: {{sex}}</div>
   </div>
 </div>
+{{/data}}
 
 {{>partials/footer}}
