--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -16,11 +16,13 @@
         </form>
     </div>
 </header>
+{{#menuItemsClass}}
 <nav>
     <ul>
-        <li class="active"><a href="">Todos</a></li>
-        <li class=""><a href="">Cachorros</a></li>
-        <li class=""><a href="">Gatos</a></li>
-        <li class=""><a href="">Peixes</a></li>
+        <li class="{{all}}"><a href="/pets">Todos</a></li>
+        <li class="{{dog}}"><a href="/pets/dog">Cachorros</a></li>
+        <li class="{{cat}}"><a href="/pets/cat">Gatos</a></li>
+        <li class="{{fish}}"><a href="/pets/fish">Peixes</a></li>
     </ul>
 </nav>
+{{/menuItemsClass}}
